--- a/src/i18n/translations/uk.json
+++ b/src/i18n/translations/uk.json
@@ -1248,7 +1248,7 @@
       "title": "Створити повернення коштів",
       "sendNotificationHint": "Сповістіть клієнтів про створене повернення коштів.",
       "systemPayment": "Системний платіж",
-      "systemPaymentDesc": "Один або кілька ваших платежів є системним платежем. Будь ласка, зверніть увагу, що системи Medusa не обробляють повернення коштів для таких платежів.",
+      "systemPaymentDesc": "Один або кілька ваших платежів є системним платежем. Будь ласка, зверніть увагу, що системи WChain не обробляють повернення коштів для таких платежів.",
       "error": {
         "amountToLarge": "Неможливо повернути більше, ніж оригінальна сума замовлення.",
         "amountNegative": "Сума повернення повинна бути позитивною.",
@@ -2187,7 +2187,7 @@
       "header": "Редагувати профіль",
       "languageHint": "Мова, яку ви хочете використовувати в адміністративній панелі. Це не змінює мову вашого магазину.",
       "languagePlaceholder": "Виберіть мову",
-      "usageInsightsHint": "Поділіться аналізом використання і допоможіть нам покращити Medusa. Ви можете дізнатися більше про те, що ми збираємо і як ми це використовуємо в нашій <0>документації</0>."
+      "usageInsightsHint": "Поділіться аналізом використання і допоможіть нам покращити WChain. Ви можете дізнатися більше про те, що ми збираємо і як ми це використовуємо в нашій <0>документації</0>."
     },
     "toast": {
       "edit": "Зміни профілю збережено"
@@ -2420,7 +2420,7 @@
       "createPublishableHeader": "Створити публічний API ключ",
       "createPublishableHint": "Створіть новий публічний API ключ для обмеження запитів до конкретних каналів продажу.",
       "createSecretHeader": "Створити секретний API ключ",
-      "createSecretHint": "Створіть новий секретний API ключ для доступу до Medusa API як автентифікований адміністратор.",
+      "createSecretHint": "Створіть новий секретний API ключ для доступу до WChain API як автентифікований адміністратор.",
       "secretKeyCreatedHeader": "Секретний ключ створено",
       "secretKeyCreatedHint": "Ваш новий секретний ключ створено. Скопіюйте та збережіть його зараз. Це єдиний раз, коли він буде показаний.",
       "copySecretTokenSuccess": "Секретний ключ скопійовано в буфер обміну.",
@@ -2514,11 +2514,11 @@
   },
   "login": {
     "forgotPassword": "Забули пароль? - <0>Скинути</0>",
-    "title": "Ласкаво просимо до Medusa",
+    "title": "Ласкаво просимо до ",
     "hint": "Увійдіть, щоб отримати доступ до особистого кабінету"
   },
   "invite": {
-    "title": "Ласкаво просимо до Medusa",
+    "title": "Ласкаво просимо до WChain",
     "hint": "Створіть акаунт нижче",
     "backToLogin": "Повернутися до входу",
     "createAccount": "Створити акаунт",
@@ -2526,8 +2526,8 @@
     "emailTooltip": "Вашу електронну пошту не можна змінити. Якщо ви хочете використовувати іншу електронну пошту, потрібно надіслати нове запрошення.",
     "invalidInvite": "Запрошення недійсне або сплив термін.",
     "successTitle": "Ваш акаунт зареєстровано",
-    "successHint": "Розпочніть роботу з Medusa Admin прямо зараз.",
-    "successAction": "Почати роботу з Medusa Admin",
+    "successHint": "Розпочніть роботу з WChain Admin прямо зараз.",
+    "successAction": "Почати роботу з WChain Admin",
     "invalidTokenTitle": "Ваш токен запрошення недійсний",
     "invalidTokenHint": "Спробуйте запросити нове посилання для запрошення.",
     "passwordMismatch": "Паролі не збігаються",
@@ -2560,7 +2560,7 @@
   },
   "workflowExecutions": {
     "domain": "Процеси роботи",
-    "subtitle": "Переглядайте та відстежуйте виконання процесів роботи у вашій Medusa аплікації.",
+    "subtitle": "Переглядайте та відстежуйте виконання процесів роботи у вашій WChain аплікації.",
     "transactionIdLabel": "ID транзакції",
     "workflowIdLabel": "ID процесу роботи",
     "progressLabel": "Прогрес",
@@ -2651,7 +2651,7 @@
       "description": "У вас наразі немає сповіщень, але коли вони з'являться, вони будуть відображені тут."
     },
     "accessibility": {
-      "description": "Сповіщення про активність Medusa будуть відображатися тут."
+      "description": "Сповіщення про активність WChain будуть відображатися тут."
     }
   },
   "errors": {
