--- a/src/i18n/translations/ja.json
+++ b/src/i18n/translations/ja.json
@@ -1248,7 +1248,7 @@
       "title": "返金を作成",
       "sendNotificationHint": "作成された返金について顧客に通知します。",
       "systemPayment": "システム支払い",
-      "systemPaymentDesc": "1つ以上の支払いがシステム支払いです。このような支払いの取り込みと返金はMedusaでは処理されないことに注意してください。",
+      "systemPaymentDesc": "1つ以上の支払いがシステム支払いです。このような支払いの取り込みと返金はWChainでは処理されないことに注意してください。",
       "error": {
         "amountToLarge": "元の注文金額を超えて返金することはできません。",
         "amountNegative": "返金額は正の数でなければなりません。",
@@ -2152,7 +2152,7 @@
       "header": "プロフィールを編集",
       "languageHint": "管理ダッシュボードで使用する言語です。これにより、ストアの言語は変更されません。",
       "languagePlaceholder": "言語を選択",
-      "usageInsightsHint": "使用状況のインサイトを共有し、Medusaの改善にご協力ください。収集内容やその使用方法については、<0>ドキュメント</0>をご覧ください。"
+      "usageInsightsHint": "使用状況のインサイトを共有し、WChainの改善にご協力ください。収集内容やその使用方法については、<0>ドキュメント</0>をご覧ください。"
     },
     "toast": {
       "edit": "プロフィールの変更が保存されました"
@@ -2385,7 +2385,7 @@
       "createPublishableHeader": "公開可能なAPIキーを作成",
       "createPublishableHint": "特定の販売チャネルへのリクエストの範囲を制限するための新しい公開可能なAPIキーを作成します。",
       "createSecretHeader": "秘密のAPIキーを作成",
-      "createSecretHint": "認証された管理者ユーザーとしてMedusa APIにアクセスするための新しい秘密のAPIキーを作成します。",
+      "createSecretHint": "認証された管理者ユーザーとしてWChain APIにアクセスするための新しい秘密のAPIキーを作成します。",
       "secretKeyCreatedHeader": "秘密のキーが作成されました",
       "secretKeyCreatedHint": "新しい秘密のキーが生成されました。今すぐコピーして安全に保管してください。これが表示される唯一の機会です。",
       "copySecretTokenSuccess": "秘密のキーがクリップボードにコピーされました。",
@@ -2479,11 +2479,11 @@
   },
   "login": {
     "forgotPassword": "パスワードをお忘れですか？ - <0>リセット</0>",
-    "title": "Medusaへようこそ",
+    "title": "WChainへようこそ",
     "hint": "アカウントエリアにアクセスするにはサインインしてください"
   },
   "invite": {
-    "title": "Medusaへようこそ",
+    "title": "WChainへようこそ",
     "hint": "以下でアカウントを作成してください",
     "backToLogin": "ログインに戻る",
     "createAccount": "アカウントを作成",
@@ -2525,7 +2525,7 @@
   },
   "workflowExecutions": {
     "domain": "ワークフロー",
-    "subtitle": "Medusaアプリケーションでのワークフロー実行を表示し、追跡します。",
+    "subtitle": "アプリケーションでのワークフロー実行を表示し、追跡します。",
     "transactionIdLabel": "トランザクションID",
     "workflowIdLabel": "ワークフローID",
     "progressLabel": "進捗",
@@ -2616,7 +2616,7 @@
       "description": "現在通知はありませんが、通知が届くとここに表示されます。"
     },
     "accessibility": {
-      "description": "Medusaの活動に関する通知がここに表示されます。"
+      "description": "WChainの活動に関する通知がここに表示されます。"
     }
   },
   "errors": {
