中文国际化优化，系列编辑页面，产品类型删除提示语

--- a/src/i18n/translations/zhCN.json
+++ b/src/i18n/translations/zhCN.json
@@ -804,23 +804,23 @@
       "successToast": "库存项目创建成功。"
     },
     "reservation": {
-      "header": "预留 {{itemName}}",
-      "editItemDetails": "编辑预留",
+      "header": "预订 {{itemName}}",
+      "editItemDetails": "编辑预订",
       "lineItemId": "行项目ID",
       "orderID": "订单ID",
       "description": "描述",
       "location": "位置",
       "inStockAtLocation": "该位置库存",
       "availableAtLocation": "该位置可用",
-      "reservedAtLocation": "该位置已预留",
-      "reservedAmount": "预留数量",
-      "create": "创建预留",
-      "itemToReserve": "要预留的项目",
-      "quantityPlaceholder": "您想预留多少？",
-      "descriptionPlaceholder": "这是什么类型的预留？",
-      "successToast": "预留创建成功。",
-      "updateSuccessToast": "预留更新成功。",
-      "deleteSuccessToast": "预留删除成功。",
+      "reservedAtLocation": "该位置已预订",
+      "reservedAmount": "预订数量",
+      "create": "创建预订",
+      "itemToReserve": "要预订的项目",
+      "quantityPlaceholder": "您想预订多少？",
+      "descriptionPlaceholder": "这是什么类型的预订？",
+      "successToast": "预订创建成功。",
+      "updateSuccessToast": "预订更新成功。",
+      "deleteSuccessToast": "预订删除成功。",
       "errors": {
         "noAvaliableQuantity": "库存位置没有可用数量。",
         "quantityOutOfRange": "最小数量为1，最大数量为{{max}}"
