feat(layout): 在顶部栏添加文档链接按钮，并更新国际化文件以支持多语言文档标签

--- a/src/i18n/translations/$schema.json
+++ b/src/i18n/translations/$schema.json
@@ -998,9 +998,12 @@
               },
               "required": ["header", "general", "developer", "myAccount"],
               "additionalProperties": false
+            },
+            "docs": {
+              "type": "string"
             }
           },
-          "required": ["accessibility", "common", "main", "settings"],
+          "required": ["accessibility", "common", "main", "settings", "docs"],
           "additionalProperties": false
         }
       },
