--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -258,7 +258,8 @@
         "general": "General",
         "developer": "Developer",
         "myAccount": "My Account"
-      }
+      },
+      "docs": "User Guide"
     }
   },
   "dataGrid": {
