--- a/src/i18n/translations/fr.json
+++ b/src/i18n/translations/fr.json
@@ -258,7 +258,8 @@
         "general": "General",
         "developer": "Développeur",
         "myAccount": "Mon compte"
-      }
+      },
+      "docs": "Documentation"
     }
   },
   "dataGrid": {
