--- a/src/i18n/translations/th.json
+++ b/src/i18n/translations/th.json
@@ -257,7 +257,8 @@
         "general": "ทั่วไป",
         "developer": "นักพัฒนา",
         "myAccount": "บัญชีของฉัน"
-      }
+      },
+      "docs": "คู่มือการใช้งาน"
     }
   },
   "dataGrid": {
