--- a/src/i18n/translations/tr.json
+++ b/src/i18n/translations/tr.json
@@ -258,7 +258,8 @@
         "general": "Genel",
         "developer": "Geliştirici",
         "myAccount": "Hesabım"
-      }
+      },
+      "docs": "Kullanım Kılavuzu"
     }
   },
   "dataGrid": {
