--- a/src/i18n/translations/uk.json
+++ b/src/i18n/translations/uk.json
@@ -258,7 +258,8 @@
         "general": "Загальні",
         "developer": "Розробник",
         "myAccount": "Мій акаунт"
-      }
+      },
+      "docs": "Користувацька документація"
     }
   },
   "dataGrid": {
