2150 vendor 产品添加分类无法多选 （编辑产品/新建产品） 多选优化

--- a/src/i18n/translations/$schema.json
+++ b/src/i18n/translations/$schema.json
@@ -382,6 +382,9 @@
         },
         "mustBePositive": {
           "type": "string"
+        },
+        "maxSelected": {
+          "type": "string"
         }
       },
       "required": [
