--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "يجب أن تكون القيمة عددًا صحيحًا.",
-    "mustBePositive": "يجب أن تكون القيمة عددًا موجبًا."
+    "mustBePositive": "يجب أن تكون القيمة عددًا موجبًا.",
+    "maxSelected": "حد أقصى {{value}} اختر"
   },
   "actions": {
     "save": "حفظ",
