--- a/src/i18n/translations/bg.json
+++ b/src/i18n/translations/bg.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "Стойността трябва да е цяло число.",
-    "mustBePositive": "Стойността трябва да е положително число."
+    "mustBePositive": "Стойността трябва да е положително число.",
+    "maxSelected": "Максимално {{value}} избрани"
   },
   "actions": {
     "save": "Запази",
