--- a/src/i18n/translations/cs.json
+++ b/src/i18n/translations/cs.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "Hodnota musí být celé číslo.",
-    "mustBePositive": "Hodnota musí být kladné číslo."
+    "mustBePositive": "Hodnota musí být kladné číslo.",
+    "maxSelected": "Vyberte maximálně {{value}} položek"
   },
   "actions": {
     "save": "Uložit",
