--- a/src/i18n/translations/el.json
+++ b/src/i18n/translations/el.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "Η τιμή πρέπει να είναι ακέραιος αριθμός.",
-    "mustBePositive": "Η τιμή πρέπει να είναι θετικός αριθμός."
+    "mustBePositive": "Η τιμή πρέπει να είναι θετικός αριθμός.",
+    "maxSelected": "Μέγιστο {{value}} επιλογές"
   },
   "actions": {
     "save": "Αποθήκευση",
