--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "The value must be a whole number.",
-    "mustBePositive": "The value must be a positive number."
+    "mustBePositive": "The value must be a positive number.",
+    "maxSelected": "Select up to {{value}} items"
   },
   "actions": {
     "save": "Save",
