--- a/src/i18n/translations/mk.json
+++ b/src/i18n/translations/mk.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "Вредноста мора да биде цел број.",
-    "mustBePositive": "Вредноста мора да биде позитивен број."
+    "mustBePositive": "Вредноста мора да биде позитивен број.",
+    "maxSelected": "Максимално {{value}} избранo"
   },
   "actions": {
     "save": "Зачувај",
