--- a/src/i18n/translations/pl.json
+++ b/src/i18n/translations/pl.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "Wartość musi być liczbą całkowitą.",
-    "mustBePositive": "Wartość musi być liczbą dodatnią."
+    "mustBePositive": "Wartość musi być liczbą dodatnią.",
+    "maxSelected": "Wybierz maksymalnie {{value}} elementów"
   },
   "actions": {
     "save": "Zapisz",
