--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "O valor deve ser um número inteiro.",
-    "mustBePositive": "O valor deve ser um número positivo."
+    "mustBePositive": "O valor deve ser um número positivo.",
+    "maxSelected": "Selecione no máximo {{value}} itens"
   },
   "actions": {
     "save": "Salvar",
