--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "Значение должно быть целым числом.",
-    "mustBePositive": "Значение должно быть положительным числом."
+    "mustBePositive": "Значение должно быть положительным числом.",
+    "maxSelected": "Выберите не более {{value}} штук"
   },
   "actions": {
     "save": "Сохранить",
