--- a/src/i18n/translations/uk.json
+++ b/src/i18n/translations/uk.json
@@ -93,7 +93,8 @@
   },
   "validation": {
     "mustBeInt": "Значення повинно бути цілим числом.",
-    "mustBePositive": "Значення повинно бути додатнім числом."
+    "mustBePositive": "Значення повинно бути додатнім числом.",
+    "maxSelected": "Максимум {{value}} обраних"
   },
   "actions": {
     "save": "Зберегти",
