feat(i18n): 添加登录页面的非供应商账户创建提示- 在多个语言文件中添加了登录页面的非供应商账户创建提示 - 包括阿拉伯语、保加利亚语、捷克语和简体中文 - 新增提示信息位于 login 对象中，键名为 notSellerYet

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -2612,7 +2612,8 @@
   "login": {
     "forgotPassword": "نسيت كلمة المرور؟ - <0>إعادة تعيين</0>",
     "title": "مرحبًا بك في مدوسا",
-    "hint": "سجل الدخول للوصول إلى منطقة الحساب"
+    "hint": "سجل الدخول للوصول إلى منطقة الحساب",
+    "notSellerYet": "لست موردًا بعد؟ - <0>إنشاء حساب</0>"
   },
   "invite": {
     "title": "مرحبًا بك في مدوسا",
