--- a/src/i18n/translations/bg.json
+++ b/src/i18n/translations/bg.json
@@ -2643,7 +2643,8 @@
   "login": {
     "forgotPassword": "Забравена парола? - <0>Нулирай</0>",
     "title": "Добре дошли в WChain",
-    "hint": "Впишете се, за да получите достъп до профила си"
+    "hint": "Впишете се, за да получите достъп до профила си",
+    "notSellerYet": "Не сте продавач? - <0>Създайте профил</0>"
   },
   "invite": {
     "title": "Добре дошли в WChain",
