2219 vendor 产品列表分页 添加页码跳转

--- a/src/i18n/translations/$schema.json
+++ b/src/i18n/translations/$schema.json
@@ -1066,6 +1066,26 @@
             "docs"
           ],
           "additionalProperties": false
+        },
+        "table": {
+          "type": "object",
+          "properties": {
+            "jumpTo": {
+              "type": "string"
+            },
+            "confirm": {
+              "type": "string"
+            },
+            "page": {
+              "type": "string"
+            }
+          },
+          "required": [
+            "jumpTo",
+            "confirm",
+            "page"
+          ],
+          "additionalProperties": false
         }
       },
       "required": [
