2237 vendor账号在编辑变体的时候，无法带回详细信息

--- a/src/i18n/translations/de.json
+++ b/src/i18n/translations/de.json
@@ -259,6 +259,11 @@
         "developer": "Entwickler",
         "myAccount": "Mein Konto"
       }
+    },
+    "table": {
+      "jumpTo": "Gehe zu",
+      "confirm": "Bestätigen",
+      "page": "Seite"
     }
   },
   "dataGrid": {
