--- a/src/i18n/translations/el.json
+++ b/src/i18n/translations/el.json
@@ -260,6 +260,11 @@
         "developer": "Προγραμματιστής",
         "myAccount": "Ο λογαριασμός μου"
       }
+    },
+    "table": {
+      "jumpTo": "Μετάβαση σε",
+      "confirm": "Επιβεβαίωση",
+      "page": "σελίδα"
     }
   },
   "dataGrid": {
