--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -261,6 +261,11 @@
         "myAccount": "My Account"
       },
       "docs": "User Guide"
+    },
+    "table": {
+      "jumpTo":"Jump to",
+      "confirm":"Confirm",
+      "page":"Page"
     }
   },
   "dataGrid": {
