--- a/src/i18n/translations/fa.json
+++ b/src/i18n/translations/fa.json
@@ -260,6 +260,11 @@
         "developer": "توسعه‌دهنده",
         "myAccount": "حساب من"
       }
+    },
+    "table": {
+      "jumpTo": "رفتن به",
+      "confirm": "تایید",
+      "page": "صفحه"
     }
   },
   "dataGrid": {
