--- a/src/i18n/translations/fr.json
+++ b/src/i18n/translations/fr.json
@@ -261,6 +261,11 @@
         "myAccount": "Mon compte"
       },
       "docs": "Documentation"
+    },
+    "table": {
+      "jumpTo": "Aller à",
+      "confirm": "Confirmer",
+      "page": "page"
     }
   },
   "dataGrid": {
