--- a/src/i18n/translations/it.json
+++ b/src/i18n/translations/it.json
@@ -260,6 +260,11 @@
         "developer": "Sviluppatore",
         "myAccount": "Il mio account"
       }
+    },
+    "table": {
+      "jumpTo": "Vai a",
+      "confirm": "Conferma",
+      "page": "pagina"
     }
   },
   "dataGrid": {
