--- a/src/i18n/translations/mk.json
+++ b/src/i18n/translations/mk.json
@@ -260,6 +260,11 @@
         "developer": "Програмер",
         "myAccount": "Моја сметка"
       }
+    },
+    "table": {
+      "jumpTo": "Оди до",
+      "confirm": "Потврди",
+      "page": "страница"
     }
   },
   "dataGrid": {
