--- a/src/i18n/translations/mn.json
+++ b/src/i18n/translations/mn.json
@@ -260,6 +260,11 @@
         "developer": "Хөгжүүлэгч",
         "myAccount": "Миний данс"
       }
+    },
+    "table": {
+      "jumpTo": "Очихлох",
+      "confirm": "Баталгаажуулах",
+      "page": "хуудас"
     }
   },
   "dataGrid": {
