--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -259,6 +259,11 @@
         "developer": "Desenvolvedor",
         "myAccount": "Minha Conta"
       }
+    },
+    "table": {
+      "jumpTo": "Ir para",
+      "confirm": "Confirmar",
+      "page": "página"
     }
   },
   "dataGrid": {
