--- a/src/i18n/translations/ro.json
+++ b/src/i18n/translations/ro.json
@@ -260,6 +260,11 @@
         "developer": "Dezvoltator",
         "myAccount": "Contul meu"
       }
+    },
+    "table": {
+      "jumpTo": "Du-te la",
+      "confirm": "Confirmă",
+      "page": "pagină"
     }
   },
   "dataGrid": {
