--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -260,6 +260,11 @@
         "developer": "Разработчик",
         "myAccount": "Мой аккаунт"
       }
+    },
+    "table": {
+      "jumpTo": "Перейти к",
+      "confirm": "Подтвердить",
+      "page": "страница"
     }
   },
   "dataGrid": {
