--- a/src/i18n/translations/th.json
+++ b/src/i18n/translations/th.json
@@ -260,6 +260,11 @@
         "myAccount": "บัญชีของฉัน"
       },
       "docs": "คู่มือการใช้งาน"
+    },
+    "table": {
+      "jumpTo": "ไปที่",
+      "confirm": "ยืนยัน",
+      "page": "หน้า"
     }
   },
   "dataGrid": {
