--- a/src/i18n/translations/tr.json
+++ b/src/i18n/translations/tr.json
@@ -261,6 +261,11 @@
         "myAccount": "Hesabım"
       },
       "docs": "Kullanım Kılavuzu"
+    },
+    "table": {
+      "jumpTo": "ไปที่",
+      "confirm": "ยืนยัน",
+      "page": "หน้า"
     }
   },
   "dataGrid": {
