--- a/src/i18n/translations/uk.json
+++ b/src/i18n/translations/uk.json
@@ -261,6 +261,11 @@
         "myAccount": "Мій акаунт"
       },
       "docs": "Користувацька документація"
+    },
+    "table": {
+      "jumpTo": "Перейти до",
+      "confirm": "Підтвердити",
+      "page": "сторінка"
     }
   },
   "dataGrid": {
